@@ -2,6 +2,7 @@ Changes
 examples/clean_cover.pl
 examples/clean_date.pl
 examples/clean_edition_number.pl
+examples/clean_issn.pl
 examples/clean_number_of_pages.pl
 examples/marc_to_wikidata_print.pl
 inc/Module/Install.pm
@@ -73,15 +74,16 @@ t/MARC-Convert-Wikidata-Utils/02-version.t
 t/MARC-Convert-Wikidata-Utils/03-clean_cover.t
 t/MARC-Convert-Wikidata-Utils/04-clean_date.t
 t/MARC-Convert-Wikidata-Utils/05-clean_edition_number.t
-t/MARC-Convert-Wikidata-Utils/06-clean_number_of_pages.t
-t/MARC-Convert-Wikidata-Utils/07-clean_oclc.t
-t/MARC-Convert-Wikidata-Utils/08-clean_publication_date.t
-t/MARC-Convert-Wikidata-Utils/09-clean_publisher_name.t
-t/MARC-Convert-Wikidata-Utils/10-clean_publisher_place.t
-t/MARC-Convert-Wikidata-Utils/11-clean_series_name.t
-t/MARC-Convert-Wikidata-Utils/12-clean_series_ordinal.t
-t/MARC-Convert-Wikidata-Utils/13-clean_subtitle.t
-t/MARC-Convert-Wikidata-Utils/14-clean_title.t
+t/MARC-Convert-Wikidata-Utils/06-clean_issn.t
+t/MARC-Convert-Wikidata-Utils/07-clean_number_of_pages.t
+t/MARC-Convert-Wikidata-Utils/08-clean_oclc.t
+t/MARC-Convert-Wikidata-Utils/09-clean_publication_date.t
+t/MARC-Convert-Wikidata-Utils/10-clean_publisher_name.t
+t/MARC-Convert-Wikidata-Utils/11-clean_publisher_place.t
+t/MARC-Convert-Wikidata-Utils/12-clean_series_name.t
+t/MARC-Convert-Wikidata-Utils/13-clean_series_ordinal.t
+t/MARC-Convert-Wikidata-Utils/14-clean_subtitle.t
+t/MARC-Convert-Wikidata-Utils/15-clean_title.t
 t/MARC-Convert-Wikidata/01-use.t
 t/MARC-Convert-Wikidata/02-version.t
 t/MARC-Convert-Wikidata/03-new.t
